# Fanout---Royalty-Splits-on-Stellar

./: ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  README.md
.github/workflows/: ci.yml
contracts/distributor/: Cargo.toml
contracts/distributor/src/: lib.rs  test.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  test.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ActivityFeed.jsx  Banner.jsx  CreateWorkForm.jsx  Header.jsx  Hero.jsx  SplitBar.jsx  WorkCard.jsx  WorkCardSkeleton.jsx
frontend/src/hooks/: useWallet.js
frontend/src/lib/: config.js  events.js  fanoutActions.js  formatEvent.js  sorobanClient.js  splitMath.js  wallet.js
frontend/src/test/: SplitBar.test.jsx  formatEvent.test.js  splitMath.test.js
