[package]
name = "distributor"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.7.6"
registry = { path = "../registry" }

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils"] }
registry = { path = "../registry", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
